package S201250181;
import S201250181.Matrix.Position;
public interface Linable {

    public void setPosition(Position position);

    public Position getPosition();

    public int getValue();

}
